--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.48",
     "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
